syntax = "proto2";

package commonroad_map;

message IncomingGroup {
    required uint32 incoming_group_id = 1;
    repeated uint32 incoming_lanelets = 2;
    optional uint32 outgoing_group_id = 3;
    repeated uint32 outgoings_right = 4;
    repeated uint32 outgoings_straight = 5;
    repeated uint32 outgoings_left = 6;
    repeated uint32 crossing_lanelets = 7;
}

message OutgoingGroup {
    required uint32 outgoing_group_id = 1;
    repeated uint32 outgoing_lanelets = 2;
}

message Intersection {
    required uint32 intersection_id = 1;
    repeated IncomingGroup incoming_groups = 2;
    repeated OutgoingGroup outgoing_groups = 3;
}